Adding most maledictions and most benedictions

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "plugin:prettier/recommended"
     ],
     "rules": {
+      "no-case-declarations": "off",
       "@typescript-eslint/explicit-function-return-type": [
         "error",
         {
